--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CodeBin Manager - ERP para Pequeñas Empresas</title>
+    <title>CodeBin ERP</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
